<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperhuella">

    <TextView
        android:id="@+id/tituloRegistroUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/tituloRegistro"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dniUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dniUser"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloRegistroUsuario" />

    <EditText
        android:id="@+id/nameUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nameUser"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dniUser" />

    <EditText
        android:id="@+id/addressUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/addressUser"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameUser" />

    <EditText
        android:id="@+id/emailUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/emailUser"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressUser" />

    <EditText
        android:id="@+id/passwordUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/passwordUser"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailUser" />

    <Button
        android:id="@+id/btnRegisterUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/btnRegisterUser"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>