<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardCornerRadius="75dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/photoPetView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded"
                app:srcCompat="@drawable/iconpet" />
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="15dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textNamePet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textNamePet"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textBreedPet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textBreedPet"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textAgePet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textAgePet"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textColorPet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textColorPet"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
